@@ -1,4 +1,6 @@
-See:
-* http://code.google.com/p/libcpath/wiki/Building
-* README.macosx
+libcpath is a library for cross-platform C path functions.
+
+For more information see:
+* Project documentation: https://github.com/libyal/libcpath/wiki/Home
+* How to build from source: https://github.com/libyal/libcpath/wiki/Building
 
