@@ -1,6 +1,7 @@
 [Project]
 name: "libcpath"
 status: "alpha"
+description: "a library for cross-platform C path functions"
 features: [
     "debug_output",
     "git", "source_package",
@@ -11,12 +12,12 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSOGFVQUwtOHlEWjQ/"
 
 [git]
-url: "https://code.google.com/p/libcpath/"
+url: "https://github.com/libyal/libcpath.git"
 
 [cygwin]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "cygcpath-0.dll"
 
 [gcc]
@@ -26,7 +27,7 @@ static_build_dependencies: []
 [mingw]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "libcpath-1.dll"
 
 [msvscpp]
