@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libcpath.dll\0"
       VALUE "ProductName",		"libcpath\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libcpath/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libcpath/\0"
     END
   END
   BLOCK "VarFileInfo"
