@@ -8,6 +8,9 @@ TODO
 * update man page
 * add more tests
 
+20140915
+* changes for project site move
+
 20140626
 * worked on pre Windows XP support
 
